--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
   <h5 class="mt-4 form-group">Twitterアカウントで登録する</h5>
   <%- resource_class.omniauth_providers.each do |provider| %>
     <div class="form-group actions">
-      <%= link_to omniauth_authorize_path(resource_name, provider), class: 'btn btn-primary' do %>
+      <%= link_to omniauth_authorize_path(resource_name, provider), class: 'btn btn-primary', method: :post do %>
         <i class="fab fa-twitter text-white"></i> 登録する
       <% end %>
     </div>
